--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .DS_Store
 .vscode/
 .ipynb_checkpoints/
+.RData
+.Rhistory
+.Rproj.user
+./puppeteer_crawling/myUserDataDir/
+./puppeteer_crawling/node_modules/
+./puppeteer_crawling/Package-lock.json
+./puppeteer_crawling/package.json
