--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .RData
 .Rhistory
 .Rproj.user
-.puppeteer_crawling/myUserDataDir/
-.puppeteer_crawling/node_modules/
-.puppeteer_crawling/Package-lock.json
-.puppeteer_crawling/package.json
+puppeteer_crawling/myUserDataDir/
+puppeteer_crawling/node_modules/
+puppeteer_crawling/Package-lock.json
+puppeteer_crawling/package.json
